# KeyboardLighting

./: .clang-tidy  CMakeLists.txt  Makefile  keyboard_image.cpp  keyboard_layout.h  keyboard_lighting.cpp  keyboard_text.cpp  utils.cpp  utils.h
src/: keyboard.cpp  keyboard_image.cpp  keyboard_layout.h  keyboard_layout.hpp  keyboard_mania.cpp  keyboard_text.cpp  osu_parser.cpp  osu_parser.h
src/mania/: forward.hpp  keyboard_mania.cpp  osu_parser.cpp  osu_parser.h  playback.cpp  playback.h  playback.hpp  render.cpp  render.h  render.hpp
